--- a/pubbrain_app/static/css/pubbrain_search.css
+++ b/pubbrain_app/static/css/pubbrain_search.css
@@ -4,7 +4,7 @@ body{
 			line-height: 1.6
 		}
 		.container{
-			width: 800px;
+			width: 1300px;
 			margin: 0 auto;
 		}
 
@@ -36,4 +36,17 @@ body{
 
 		.tab-content.current{
 			display: inherit;
+		}
+		
+		#NeuroVaultPapayaHolder {
+			float:left;
+			width:860px; 
+			height:860px;
+			
+		}
+		
+		.regions-datatable {
+			float:right;
+			width:200px;
+			height:860px;
 		}
