--- a/pubbrain_app/templates/base.html
+++ b/pubbrain_app/templates/base.html
@@ -10,9 +10,13 @@
 	<script src="{% static "scripts/jquery-1.10.2.min.js"%}" type="text/javascript"></script>
     <script src="{% static "scripts/jquery-ui.min.js"%}" type="text/javascript"></script>
     <script src="{% static "scripts/bootstrap.min.js"%}" type="text/javascript"></script>
+    <script src="{% static "scripts/jquery.dataTables.min.js"%}" type="text/javascript"></script>
+    <script src="{% static "scripts/paging.js"%}" type="text/javascript"></script>
     <script src="{% static "scripts/base.js"%}" type="text/javascript"></script>
     <link rel="stylesheet" href="{% static "css/bootstrap.css" %}" />
     <link href="{% static "css/jquery-ui.css"%}" media="screen" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="{% static "css/datatables.css" %}" />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static "css/style.css" %}" />
     {% endblock %}
 	{% block head %}{% endblock %}
