changed templates to 'load static from staticfiles'

--- a/pubbrain_app/templates/index.html
+++ b/pubbrain_app/templates/index.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static from staticfiles %}
 <h1> PubBrain results for query: {{ query }} </h1>
 {% if query_results %} 
 <ul> 
