--- a/pubbrain_app/templates/papaya_frame.html.haml
+++ b/pubbrain_app/templates/papaya_frame.html.haml
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static %}
+{% load static from staticfiles %}
 {% block global_includes %}
 <style type="text/css">
 body {margin:0;padding:0;background:none transparent;}
