--- a/pubbrain_app/templates/base.html
+++ b/pubbrain_app/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% load static %}
+{% load static from staticfiles %}
 <head>
 	<title>
 		{% block title %}PubBrain: See a heatmap of the brain representing the neuroscientific literature relating to a search term of your choice{% endblock %}
