--- a/pubbrain_app/templates/pubbrain_search.html
+++ b/pubbrain_app/templates/pubbrain_search.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static %}
+{% load static from staticfiles %}
 {% load coffeescript %}
 {% block includes %}
 <script type="text/javascript" src="{% static "scripts/papaya.js"%}"/>
